@@ -1,8 +1,8 @@
 ############################################################################
 # apps/vsn/Makefile
 #
-#   Copyright (C) 2011 Gregory Nutt. All rights reserved.
-#   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+#   Copyright (C) 2011-2012 Gregory Nutt. All rights reserved.
+#   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -37,7 +37,7 @@
 
 # Sub-directories
 
-SUBDIRS = hello poweroff ramtron sdcard sysinfo
+SUBDIRS = poweroff ramtron sdcard sysinfo
 
 all: nothing
 .PHONY: nothing context depend clean distclean
