@@ -1,5 +1,0 @@
-
-This application provides Hello Builtin Application skeleton 
-
-	Source: NuttX
-	Date: 13. March 2011
